--- a/index.html
+++ b/index.html
@@ -10,11 +10,7 @@
   <meta name="theme-color" content="#2874F0" />
   <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;600;700;800&display=swap" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
-
-  <!-- === AdSense Global Script (REQUIRED - put in HEAD) === -->
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3035782856646159"
-     crossorigin="anonymous"></script>
-    
+  
   <style>
     :root{
       --bg:#fad075;
@@ -41,22 +37,6 @@
       overflow-x:hidden;
       font-size:14px;
     }
-    /* === AD CONTAINER STYLES === */
-    .ad-container {
-      max-width: 100%;
-      margin: 24px auto;
-      padding: 16px 12px;
-      text-align: center;
-      background: rgba(255,255,255,0.9);
-      border-radius: 12px;
-      box-shadow: 0 4px 16px rgba(0,0,0,0.1);
-    }
-    .ad-container.top-ad { margin-top: 12px; margin-bottom: 20px; }
-    .ad-container.bottom-ad { margin-bottom: 20px; }
-    @media (min-width: 640px) {
-      .ad-container { max-width: 860px; padding: 20px; }
-    }
-   
     /* Floating Icons */
     .floating-icons{ position:fixed;left:0;top:0;right:0;bottom:0;pointer-events:none;z-index:0;overflow:hidden; }
     .float-svg{
@@ -75,7 +55,6 @@
     @keyframes floatPulse { 0%, 100%{transform:scale(1)} 50%{transform:scale(1.08)} }
     @keyframes floatPendulum { 0%{transform:rotate(-8deg) translateX(-8px)} 50%{transform:rotate(8deg) translateX(8px)} 100%{transform:rotate(-8deg) translateX(-8px)} }
     @keyframes floatWarp { 0%{transform:rotateZ(0) scale(1)} 33%{transform:rotateZ(20deg) scale(0.98)} 66%{transform:rotateZ(-20deg) scale(1.02)} 100%{transform:rotateZ(0) scale(1)} }
-
     header{
       position:sticky; top:0; z-index:120; display:flex;align-items:center;gap:8px;
       background:linear-gradient(135deg, var(--primary), #00bcd4);
@@ -87,8 +66,7 @@
     .brand{font-weight:800;font-size:18px;color:#fff;display:flex;gap:4px;align-items:center}
     .brand span{color:#ffe500; font-weight:900}
     .header-right{margin-left:auto;display:flex;gap:8px;align-items:center}
-
-    /* NEW: My Orders Button */
+    /* My Orders Button */
     .orders-btn{
       background:linear-gradient(135deg, #ff8f00, #ff6d00);
       color:white;
@@ -105,7 +83,6 @@
       gap:6px;
     }
     .orders-btn:hover { transform: translateY(-2px); }
-
     .cart-btn{
       background:linear-gradient(135deg, var(--accent), #ff8f00);
       color:white;
@@ -118,7 +95,6 @@
       transition:transform 0.3s;
     }
     .cart-btn:hover { transform: translateY(-2px); }
-
     .sidebar{
       position:fixed;left:-100%;top:0;width:280px;height:100%;z-index:220;
       background:linear-gradient(180deg,#ffffff, #f1f3f6); padding:12px; box-shadow: 4px 12px 40px var(--shadow);
@@ -138,7 +114,6 @@
     .quotes-section { max-width:100%; margin:12px 0; padding:12px; background:linear-gradient(135deg, #e3f2fd, #fff); border-radius:8px; box-shadow:0 4px 12px var(--shadow); text-align:center; }
     .quote { font-style:italic; color:var(--muted); font-size:14px; }
     .quote-author { font-weight:700; color:var(--primary); margin-top:4px; }
-    /* === ENHANCED FOOD & GROCERY BUTTONS === */
     .tab-switch{
       display:flex;
       gap:12px;
@@ -285,34 +260,18 @@
     </svg>
     <!-- Add your other floating SVGs if you have them -->
   </div>
-
   <header role="banner">
     <button id="navBtn" class="nav-btn" aria-label="Open menu">
       <svg width="18" height="18" viewBox="0 0 24 24" fill="none"><path d="M4 7h16M4 12h16M4 17h16" stroke="#fff" stroke-width="1.6" stroke-linecap="round"/></svg>
     </button>
     <div class="brand">Chat<span>Point</span></div>
     <div class="header-right">
-      <!-- NEW: My Orders Button -->
       <button class="orders-btn" onclick="location.href='tracking.html'">
         <i class="fas fa-shopping-bag"></i> My Orders
       </button>
       <button class="cart-btn" aria-label="Cart">🛒 Cart</button>
     </div>
   </header>
-
-  <!-- === TOP AD BANNER === -->
-  <div class="ad-container top-ad">
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-format="fluid"
-         data-ad-layout-key="-6v+d0+3u-16-1l"
-         data-ad-client="ca-pub-3035782856646159"
-         data-ad-slot="5613996084"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  </div>
-
   <aside id="sidebar" class="sidebar" aria-hidden="true">
     <div class="profile-section" id="profileSection" aria-live="polite">
       <div class="avatar">🙂</div>
@@ -326,7 +285,6 @@
     <div style="margin-top:auto;font-size:13px;color:var(--muted);padding-top:18px">© 2025 Chat Point</div>
   </aside>
   <div id="overlay" class="overlay" tabindex="-1"></div>
-
   <main>
     <section class="quotes-section">
       <div class="quote">"Food is symbolic of love when words are inadequate." – Alan D. Wolfelt</div>
@@ -350,40 +308,7 @@
     </section>
     <section class="grid" id="grid" aria-live="polite" aria-label="Shops list"></section>
   </main>
-
-  <!-- === BOTTOM AD === -->
-  <div class="ad-container bottom-ad">
-    <ins class="adsbygoogle"
-         style="display:block"
-         data-ad-format="fluid"
-         data-ad-layout-key="-6v+d0+3u-16-1l"
-         data-ad-client="ca-pub-3035782856646159"
-         data-ad-slot="5613996084"></ins>
-    <script>
-         (adsbygoogle = window.adsbygoogle || []).push({});
-    </script>
-  </div>
-
   <footer>© 2025 Chat Point • Made with Passion</footer>
   <script src="index.js"></script>
-  <!-- PREMIUM AUTO-REDIRECT SCRIPT -->
-  <script>
-    window.addEventListener('load', () => {
-      const userData = localStorage.getItem('chatpoint_user');
-      if (!userData) {
-        // Not logged in → go to login
-        location.href = 'login.html';
-        return;
-      }
-      const user = JSON.parse(userData);
-      // If user is premium, redirect to premium page
-      if (user.isPremium) {
-        const currentPath = location.pathname;
-        if (!currentPath.includes('pindex.html')) {
-          location.href = 'pindex.html';
-        }
-      }
-    });
-  </script>
 </body>
 </html>
