--- a/cart.html
+++ b/cart.html
@@ -4,12 +4,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>My Cart • ChatPoint</title>
-
     <link rel="preload" href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800;900&display=swap" as="style" onload="this.onload=null;this.rel='stylesheet'">
     <noscript><link href="https://fonts.googleapis.com/css2?family=Outfit:wght@400;500;600;700;800;900&display=swap" rel="stylesheet"></noscript>
-
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
-
     <style>
         :root {
             --bg: #fdfbf7;
@@ -28,68 +25,73 @@
         }
 
         * { margin:0; padding:0; box-sizing:border-box; }
+
         body {
             font-family: 'Outfit', sans-serif;
             background: linear-gradient(135deg, #fdfbf7 0%, #fffaf0 100%);
             color: var(--text);
             min-height: 100vh;
-            line-height: 1.6;
+            line-height: 1.55;
+            -webkit-font-smoothing: antialiased;
         }
 
         header {
             position: sticky;
             top: 0;
             z-index: 100;
-            background: rgba(255,255,255,0.92);
+            background: rgba(255,255,255,0.94);
             backdrop-filter: blur(12px);
             -webkit-backdrop-filter: blur(12px);
             border-bottom: 1px solid rgba(0,0,0,0.06);
-            padding: 1rem 1.25rem;
+            padding: 0.9rem 1rem;
             display: flex;
             align-items: center;
             justify-content: space-between;
-            box-shadow: 0 4px 20px rgba(0,0,0,0.05);
+            box-shadow: 0 4px 16px rgba(0,0,0,0.05);
         }
 
         .brand {
-            font-size: 2.1rem;
+            font-size: 2rem;
             font-weight: 900;
-            letter-spacing: -1px;
+            letter-spacing: -0.8px;
             color: var(--primary);
         }
 
         .back-btn {
-            width: 48px;
-            height: 48px;
-            background: rgba(233,57,70,0.08);
+            width: 44px;
+            height: 44px;
+            background: rgba(233,57,70,0.09);
             border: none;
-            border-radius: 14px;
-            font-size: 1.8rem;
+            border-radius: 12px;
+            font-size: 1.7rem;
             color: var(--primary);
             cursor: pointer;
             transition: var(--transition);
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
-        .back-btn:hover {
+        .back-btn:hover, .back-btn:active {
             background: var(--primary);
             color: white;
-            transform: scale(1.08);
+            transform: scale(1.06);
         }
 
         .cart-badge {
             background: var(--primary);
             color: white;
-            padding: 0.35rem 0.8rem;
+            padding: 0.3rem 0.75rem;
             border-radius: 50px;
-            font-size: 0.95rem;
+            font-size: 0.9rem;
             font-weight: 800;
         }
 
         main {
-            padding: 1.5rem;
-            max-width: 720px;
+            padding: 1rem 0.9rem;
+            max-width: 760px;
             margin: 0 auto;
-            padding-bottom: 160px;
+            padding-bottom: 180px; /* more space for fixed bottom bar */
         }
 
         .cart-container {
@@ -97,43 +99,45 @@
             border-radius: var(--radius);
             overflow: hidden;
             box-shadow: var(--shadow);
-            border: 1px solid rgba(233,57,70,0.1);
+            border: 1px solid rgba(233,57,70,0.08);
         }
 
         .section-title {
             background: linear-gradient(135deg, var(--primary), var(--primary-dark));
             color: white;
-            padding: 1.2rem 1.5rem;
-            font-size: 1.35rem;
+            padding: 1.1rem 1.3rem;
+            font-size: 1.3rem;
             font-weight: 800;
             display: flex;
             align-items: center;
-            gap: 0.8rem;
+            gap: 0.7rem;
         }
 
         .cart-item {
             display: flex;
             align-items: center;
-            padding: 1.2rem 1.5rem;
-            border-bottom: 1px solid rgba(0,0,0,0.06);
+            padding: 1.1rem 1.3rem;
+            border-bottom: 1px solid rgba(0,0,0,0.05);
             transition: var(--transition);
+            gap: 0.8rem;
         }
 
         .cart-item:hover {
-            background: rgba(233,57,70,0.03);
+            background: rgba(233,57,70,0.025);
         }
 
         .item-name {
             flex: 1;
             font-weight: 600;
-            font-size: 1.15rem;
+            font-size: 1.1rem;
+            line-height: 1.4;
         }
 
         .item-price {
             font-weight: 800;
-            font-size: 1.3rem;
+            font-size: 1.25rem;
             color: var(--primary);
-            min-width: 100px;
+            min-width: 90px;
             text-align: right;
         }
 
@@ -143,57 +147,60 @@
             border: 1px solid rgba(233,57,70,0.3);
             border-radius: 12px;
             overflow: hidden;
-            margin-left: 1.2rem;
+            flex-shrink: 0;
         }
 
         .qbtn {
-            width: 42px;
-            height: 42px;
+            width: 46px;
+            height: 46px; /* better touch target */
             background: transparent;
             border: none;
             color: var(--primary);
-            font-size: 1.6rem;
+            font-size: 1.7rem;
             cursor: pointer;
             transition: var(--transition);
+            display: flex;
+            align-items: center;
+            justify-content: center;
         }
 
-        .qbtn:hover {
-            background: rgba(233,57,70,0.12);
+        .qbtn:hover, .qbtn:active {
+            background: rgba(233,57,70,0.14);
         }
 
         .qty {
-            min-width: 50px;
+            min-width: 52px;
             text-align: center;
             font-weight: 700;
-            font-size: 1.15rem;
-            padding: 0 0.8rem;
+            font-size: 1.12rem;
+            padding: 0 0.7rem;
         }
 
         .delivery-status {
-            padding: 1.2rem;
-            margin: 0.8rem 1.5rem;
-            border-radius: 16px;
+            padding: 1.1rem;
+            margin: 0.7rem 1.2rem;
+            border-radius: 14px;
             text-align: center;
             font-weight: 700;
-            font-size: 1.1rem;
-            background: rgba(233,57,70,0.06);
-            border: 1px solid rgba(233,57,70,0.2);
+            font-size: 1.05rem;
+            background: rgba(233,57,70,0.05);
+            border: 1px solid rgba(233,57,70,0.18);
         }
 
         .delivery-waived {
-            background: rgba(42,157,143,0.12);
-            border-color: rgba(42,157,143,0.3);
+            background: rgba(42,157,143,0.1);
+            border-color: rgba(42,157,143,0.28);
             color: #1b5e20;
         }
 
         .water-bottle-promo {
-            margin: 1.5rem;
+            margin: 1.2rem;
             background: linear-gradient(135deg, #fffaf0, #fff8e1);
             border: 2px dashed var(--accent);
-            border-radius: 20px;
-            padding: 1.6rem;
+            border-radius: 18px;
+            padding: 1.5rem;
             text-align: center;
-            box-shadow: 0 8px 24px rgba(244,162,97,0.15);
+            box-shadow: 0 7px 22px rgba(244,162,97,0.14);
             position: relative;
             overflow: hidden;
         }
@@ -201,40 +208,40 @@
         .water-bottle-promo::before {
             content: "SAVE ₹22–25!";
             position: absolute;
-            top: -12px;
-            right: -32px;
+            top: -11px;
+            right: -30px;
             background: var(--accent);
             color: white;
-            padding: 0.4rem 3.5rem;
-            font-size: 0.9rem;
+            padding: 0.35rem 3.2rem;
+            font-size: 0.85rem;
             font-weight: 800;
             transform: rotate(45deg);
-            box-shadow: 0 4px 12px rgba(0,0,0,0.15);
+            box-shadow: 0 3px 10px rgba(0,0,0,0.14);
         }
 
         .water-bottle-promo h3 {
             color: var(--primary);
-            font-size: 1.4rem;
-            margin-bottom: 0.6rem;
+            font-size: 1.35rem;
+            margin-bottom: 0.55rem;
         }
 
         .add-water-btn {
             background: linear-gradient(135deg, var(--primary), var(--primary-dark));
             color: white;
             border: none;
-            padding: 1rem 2rem;
-            border-radius: 16px;
-            font-size: 1.15rem;
+            padding: 0.95rem 1.9rem;
+            border-radius: 14px;
+            font-size: 1.1rem;
             font-weight: 700;
             cursor: pointer;
-            margin-top: 1rem;
-            box-shadow: 0 6px 20px rgba(233,57,70,0.3);
+            margin-top: 0.9rem;
+            box-shadow: 0 5px 18px rgba(233,57,70,0.28);
             transition: var(--transition);
         }
 
-        .add-water-btn:hover {
-            transform: translateY(-3px);
-            box-shadow: 0 12px 32px rgba(233,57,70,0.45);
+        .add-water-btn:hover, .add-water-btn:active {
+            transform: translateY(-2px);
+            box-shadow: 0 10px 28px rgba(233,57,70,0.42);
         }
 
         .totals-actions-wrapper {
@@ -242,29 +249,29 @@
             bottom: 0;
             left: 0;
             right: 0;
-            background: rgba(255,255,255,0.95);
+            background: rgba(255,255,255,0.96);
             backdrop-filter: blur(16px);
-            border-top: 1px solid rgba(0,0,0,0.08);
-            box-shadow: 0 -10px 30px rgba(0,0,0,0.12);
-            padding: 1.2rem;
+            border-top: 1px solid rgba(0,0,0,0.07);
+            box-shadow: 0 -8px 26px rgba(0,0,0,0.11);
+            padding: 1rem 0.9rem;
             z-index: 90;
         }
 
         .grand-total {
-            font-size: 2.8rem;
+            font-size: 2.6rem;
             font-weight: 900;
             color: var(--primary);
             text-align: center;
-            margin: 0.6rem 0;
-            letter-spacing: -1px;
+            margin: 0.5rem 0;
+            letter-spacing: -0.8px;
         }
 
         .btn {
-            padding: 1.3rem;
+            padding: 1.15rem;
             border: none;
-            border-radius: 16px;
+            border-radius: 14px;
             font-weight: 700;
-            font-size: 1.18rem;
+            font-size: 1.12rem;
             cursor: pointer;
             transition: var(--transition);
         }
@@ -278,28 +285,71 @@
         .btn-payment {
             background: linear-gradient(135deg, var(--primary), var(--primary-dark));
             color: white;
-            box-shadow: 0 8px 24px rgba(233,57,70,0.35);
-            flex: 2;
+            box-shadow: 0 7px 22px rgba(233,57,70,0.32);
+            flex: 2.2;
         }
 
-        .btn-payment:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 16px 40px rgba(233,57,70,0.5);
+        .btn-payment:hover, .btn-payment:active {
+            transform: translateY(-3px);
+            box-shadow: 0 14px 36px rgba(233,57,70,0.48);
         }
 
         .empty-cart {
             text-align: center;
-            padding: 8rem 2rem;
+            padding: 9rem 1.8rem 6rem;
             color: var(--muted);
         }
 
-        .empty-cart i { font-size: 8rem; color: rgba(233,57,70,0.15); margin-bottom: 1.5rem; }
-        .empty-cart p { font-size: 1.8rem; font-weight: 700; margin-bottom: 1.5rem; }
+        .empty-cart i {
+            font-size: 7.5rem;
+            color: rgba(233,57,70,0.14);
+            margin-bottom: 1.4rem;
+        }
 
-        @media (max-width: 520px) {
-            main { padding: 1rem 0.8rem; }
-            .cart-item { flex-direction: column; align-items: flex-start; gap: 1rem; }
-            .quantity { margin-left: 0; width: 100%; justify-content: center; }
+        .empty-cart p {
+            font-size: 1.7rem;
+            font-weight: 700;
+            margin-bottom: 1.4rem;
+        }
+
+        /* ────────────────────────────────────────────────
+           Mobile-first → only override when screen gets wider
+        ──────────────────────────────────────────────── */
+        @media (min-width: 520px) {
+            main {
+                padding: 1.4rem 1.2rem;
+            }
+
+            .cart-item {
+                flex-direction: row;
+                align-items: center;
+                gap: 1rem;
+            }
+
+            .quantity {
+                margin-left: 1.1rem;
+                width: auto;
+            }
+
+            .grand-total {
+                font-size: 2.9rem;
+            }
+
+            .btn {
+                font-size: 1.18rem;
+                padding: 1.3rem;
+            }
+        }
+
+        @media (min-width: 720px) {
+            main {
+                padding: 1.8rem 1rem;
+            }
+
+            .cart-container {
+                max-width: 680px;
+                margin: 0 auto;
+            }
         }
     </style>
 </head>
@@ -319,7 +369,7 @@
 
     <div class="totals-actions-wrapper" id="totalsActionsWrapper" style="display:none;">
         <div class="grand-total" id="floatingGrandTotal">₹0</div>
-        <div style="display:flex; gap:1rem; margin-top:1rem;">
+        <div style="display:flex; gap:0.9rem; margin-top:0.9rem;">
             <button class="btn btn-clear" onclick="clearCart()">Clear Cart</button>
             <button class="btn btn-payment" id="proceedBtn" onclick="location.href='payment.html'">
                 Proceed to Payment
@@ -328,6 +378,8 @@
     </div>
 
     <script>
+        // Your original JavaScript remains unchanged — it already works well
+        // ────────────────────────────────────────────────
         const CART_KEY = "chatpoint_cart";
         const WATER = { name: "1L Pure Water Bottle", price: 13, shop: "_special_" };
 
@@ -399,7 +451,6 @@
                 }
             }
             total += getDelivery();
-            // Add taxes, packaging etc. here later
             return total;
         }
 
@@ -426,8 +477,8 @@
 
             for (let shop in cart) {
                 if (shop === WATER.shop) continue;
-                html += `<div style="padding:1rem 1.5rem; background:rgba(233,57,70,0.02);">
-                    <div style="font-weight:800; color:var(--primary); margin-bottom:1rem;">${shop}</div>`;
+                html += `<div style="padding:1rem 1.3rem; background:rgba(233,57,70,0.02);">
+                    <div style="font-weight:800; color:var(--primary); margin-bottom:0.9rem;">${shop}</div>`;
 
                 for (let name in cart[shop]) {
                     let item = cart[shop][name];
@@ -446,15 +497,13 @@
                 html += '</div>';
             }
 
-            // Delivery status
             html += `
                 <div class="delivery-status ${hasB ? 'delivery-waived' : ''}">
-                    ${hasB 
-                        ? '<i class="fas fa-check-circle"></i> Free Delivery Unlocked!' 
+                    ${hasB
+                        ? '<i class="fas fa-check-circle"></i> Free Delivery Unlocked!'
                         : `<i class="fas fa-truck"></i> Delivery: ${format(delivery)}`}
                 </div>`;
 
-            // Water bottle promo
             if (!hasB) {
                 let needed = mainSub < 100 ? (100 - mainSub) : 0;
                 html += `
