--- a/delivery.html
+++ b/delivery.html
@@ -102,72 +102,12 @@
       justify-content: center;
       flex-wrap: wrap;
     }
-
-    /* Premium Type Popup */
-    #premiumModal {
-      display: none;
-      position: fixed;
-      top: 0; left: 0; width: 100%; height: 100%;
-      background: rgba(0,0,0,0.8);
-      z-index: 1000;
-      justify-content: center;
-      align-items: center;
-    }
-    .modal-content {
-      background: var(--card-bg);
-      padding: 2rem;
-      border-radius: 1rem;
-      width: 90%;
-      max-width: 400px;
-      text-align: center;
-      box-shadow: 0 10px 30px rgba(0,0,0,0.5);
-    }
-    .modal-title {
-      font-size: 1.5rem;
-      margin-bottom: 1rem;
-      color: var(--primary);
-    }
-    .modal-buttons {
-      display: flex;
-      gap: 1rem;
-      margin-top: 1.5rem;
-      justify-content: center;
-    }
-    .modal-btn {
-      flex: 1;
-      padding: 1rem;
-      border: none;
-      border-radius: 0.8rem;
-      font-size: 1.1rem;
-      font-weight: 700;
-      cursor: pointer;
-    }
-    .far-premium { background: #8b5cf6; color: white; }
-    .local-premium { background: #10b981; color: white; }
-    .close-modal {
-      margin-top: 1rem;
-      background: var(--danger);
-      color: white;
-    }
   </style>
 </head>
 <body>
   <div id="bigAlert" class="new-order-alert">
     <div>NEW ORDER!</div>
     <small>Check the portal now!</small>
-  </div>
-
-  <!-- Premium Type Modal -->
-  <div id="premiumModal">
-    <div class="modal-content">
-      <div class="modal-title">Choose Premium Type</div>
-      <p>Select the type of premium membership:</p>
-      <div class="modal-buttons">
-        <button class="modal-btn far-premium" data-type="far">Far Premium</button>
-        <button class="modal-btn local-premium" data-type="local">Local Premium</button>
-      </div>
-      <button class="modal-btn close-modal">Cancel</button>
-    </div>
   </div>
 
   <div class="container">
@@ -181,7 +121,6 @@
       <button class="filter-btn" data-filter="delivered">Delivered</button>
       <button class="filter-btn" data-filter="cancelled">Cancelled</button>
       <button class="filter-btn" data-filter="all">All Orders</button>
-      <button class="filter-btn" data-filter="users">Users</button>
     </div>
 
     <div id="loading">
@@ -190,7 +129,6 @@
     </div>
 
     <div id="orders-container"></div>
-    <div id="users-container" style="display:none;"></div>
     <div id="empty" class="empty" style="display:none;">
       <p>No orders in this section.</p>
     </div>
@@ -206,33 +144,15 @@
     const API_BASE = window.location.origin;
     const REFRESH_INTERVAL = 5000;
     let allOrders = [];
-    let allUsers = [];
     let currentFilter = 'active';
     let previousPendingCount = 0;
-    let currentPremiumPhone = null; // Store phone for premium action
-
     const $ = s => document.querySelector(s);
     const ordersContainer = $('#orders-container');
-    const usersContainer = $('#users-container');
     const loadingEl = $('#loading');
     const bigAlert = $('#bigAlert');
     const loudSound = $('#loudSound');
-    const premiumModal = $('#premiumModal');
 
-    // WhatsApp Messages
-    const welcomeMessage = encodeURIComponent(`*🍛 Welcome to ChatPoint! 🍲🛒*
-We're super excited to have you on board at *[chatpoint.shop](http://chatpoint.shop)* – your favorite food & grocery delivery in Sindagi! 😋
-Enjoy:
-✅ Home-style fresh meals
-✅ Super-fast delivery
-✅ Live tracking
-✅ Easy UPI or Cash payment
-✅ Exclusive offers just for you
-Order now and get your hunger fixed in minutes! 🚀
-Need help? Just reply here – we're 24/7! ❤️
-Welcome to the family!`);
-    const confirmMessage = (name) => encodeURIComponent(`Hi ${name}! 😊\nYour order on ChatPoint has been confirmed!\nWe'll prepare it soon. 🚀\nThanks for shopping with us!`);
-    const deliveredMessage = encodeURIComponent(`Great news! 🎉\nYour ChatPoint order has been delivered.\nEnjoy your items!\nOrder again at [chatpoint.shop](http://chatpoint.shop) 🌟`);
+    const deliveredMessage = encodeURIComponent(`Great news! 🎉\nYour ChatPoint order has been delivered.\nEnjoy your items!\nOrder again soon! 🌟`);
 
     function openWhatsApp(phone, message) {
       if (!phone) return alert("Phone number missing");
@@ -249,96 +169,21 @@ Welcome to the family!`);
       setTimeout(() => bigAlert.style.display = 'none', 10000);
     }
 
-    // Premium Modal Handlers
-    premiumModal.addEventListener('click', (e) => {
-      if (e.target.classList.contains('close-modal') || e.target === premiumModal) {
-        premiumModal.style.display = 'none';
-      }
-    });
-
-    document.querySelectorAll('.modal-btn[data-type]').forEach(btn => {
-      btn.addEventListener('click', async () => {
-        const type = btn.dataset.type;
-        const phone = currentPremiumPhone;
-        if (!phone) return;
-
-        premiumModal.style.display = 'none';
-
-        if (!confirm(`Make user ${phone} a ${type.toUpperCase()} PREMIUM member?`)) return;
-
-        const processingBtn = document.querySelector(`.make-premium-btn[data-phone="${phone}"]`);
-        if (processingBtn) {
-          processingBtn.disabled = true;
-          processingBtn.innerHTML = `<i class="fas fa-spinner fa-spin"></i> Processing...`;
-        }
-
-        try {
-          const res = await fetch(`${API_BASE}/api/admin/make-premium`, {
-            method: 'POST',
-            headers: { 'Content-Type': 'application/json' },
-            body: JSON.stringify({ password: 'Brand', phone, premiumType: type })
-          });
-          const data = await res.json();
-
-          if (data.success) {
-            alert(`User is now ${type.toUpperCase()} Premium! ⭐`);
-            fetchData(); // Refresh users list
-          } else {
-            alert("Failed: " + (data.message || "Try again"));
-          }
-        } catch (err) {
-          alert("Network error");
-        } finally {
-          if (processingBtn) {
-            processingBtn.disabled = false;
-            processingBtn.innerHTML = `<i class="fas fa-crown"></i> Make Premium`;
-          }
-        }
-      });
-    });
-
-    // API Calls (unchanged except for make premium)
-    async function updateOrderStatus(orderId, status) {
+    async function updateOrderStatus(orderId, status, deliveredBy = null, profitAmount = null) {
       try {
+        const body = { orderId, status };
+        if (deliveredBy !== null) body.deliveredBy = deliveredBy;
+        if (profitAmount !== null) body.profitAmount = profitAmount;
+
         const res = await fetch(`${API_BASE}/api/update-order-status`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ orderId, status })
+          body: JSON.stringify(body)
         });
         const data = await res.json();
         return data.success;
       } catch (err) {
         console.error("Update failed:", err);
-        return false;
-      }
-    }
-
-    async function updateOrderProgress(orderId, progress) {
-      try {
-        const res = await fetch(`${API_BASE}/api/update-order-progress`, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ orderId, progress })
-        });
-        const data = await res.json();
-        return data.success;
-      } catch (err) {
-        console.error("Progress update failed:", err);
-        return false;
-      }
-    }
-
-    async function deleteOrder(orderId) {
-      try {
-        const res = await fetch(`${API_BASE}/api/delete-order`, {
-          method: 'DELETE',
-          headers: { 'Content-Type': 'application/json' },
-          body: JSON.stringify({ orderId })
-        });
-        const data = await res.json();
-        return data.success;
-      } catch (err) {
-        console.error("Delete failed:", err);
         return false;
       }
     }
@@ -354,6 +199,7 @@ Welcome to the family!`);
 
       let actions = '';
       let progressButtons = '';
+
       const attrs = `data-id="${order._id}" data-phone="${order.user.phone}" data-name="${order.user.name}"`;
 
       if (order.status === 'pending') {
@@ -400,6 +246,19 @@ Welcome to the family!`);
         cancelled: '<span class="badge badge-cancelled">Cancelled</span>'
       }[order.status] || '<span class="badge badge-pending">Unknown</span>';
 
+      const deliveredInfo = order.status === 'delivered' ? `
+        <div style="margin-top:1rem; padding-top:0.8rem; border-top:1px dashed #475569; font-size:0.95rem;">
+          <div style="display:flex;justify-content:space-between;color:#94a3b8;">
+            <span>Delivered by:</span>
+            <strong style="color:var(--success);">${order.deliveredBy || 'Unknown'}</strong>
+          </div>
+          <div style="display:flex;justify-content:space-between;color:#94a3b8; margin-top:0.4rem;">
+            <span>Profit amount:</span>
+            <strong style="color:#fbbf24;">₹${(order.profitAmount || 0).toFixed(2)}</strong>
+          </div>
+        </div>
+      ` : '';
+
       return `
         <div class="card">
           <div style="display:flex;justify-content:space-between;align-items:center;margin-bottom:0.8rem;">
@@ -419,97 +278,50 @@ Welcome to the family!`);
             <span>Grand Total</span>
             <span>₹${order.totalAmount?.toFixed(2) || '0.00'}</span>
           </div>
+          ${deliveredInfo}
           ${progressButtons}
           ${actions}
         </div>
       `;
     }
 
-    function renderUsers() {
-      if (allUsers.length === 0) {
-        usersContainer.innerHTML = '<div class="empty"><p>No registered users yet.</p></div>';
-        return;
-      }
-      usersContainer.innerHTML = allUsers.map((user, i) => {
-        const isPremium = user.isPremium === "yes";
-        const premiumBadge = isPremium ? `<span class="badge" style="background:#f59e0b;color:white;margin-left:0.8rem;">PREMIUM ${user.premiumType?.toUpperCase() || ''} ⭐</span>` : '';
-        return `
-          <div style="background:#1e293b;padding:1rem;margin-bottom:0.8rem;border-radius:0.75rem;border:1px solid #334155;display:flex;justify-content:space-between;align-items:center;flex-wrap:wrap;gap:0.8rem;">
-            <div>
-              <strong>${i+1}. ${user.name || 'No Name'}</strong><br>
-              <small style="color:#94a3b8;">${user.phone}</small>
-              ${premiumBadge}
-            </div>
-            <div style="display:flex;gap:0.6rem;flex-wrap:wrap;">
-              <button class="btn btn-whatsapp" onclick="openWhatsApp('${user.phone}', welcomeMessage)">
-                <i class="fab fa-whatsapp"></i> WhatsApp
-              </button>
-              ${!isPremium ? `
-                <button class="btn btn-success make-premium-btn" data-phone="${user.phone}">
-                  <i class="fas fa-crown"></i> Make Premium
-                </button>
-              ` : ''}
-            </div>
-          </div>
-        `;
-      }).join('');
-    }
-
     function applyView() {
       loadingEl.style.display = 'none';
-      if (currentFilter === 'users') {
-        ordersContainer.style.display = 'none';
-        usersContainer.style.display = 'block';
-        renderUsers();
-        $('#empty').style.display = 'none';
+      const filtered = allOrders.filter(o => {
+        if (currentFilter === 'all') return true;
+        if (currentFilter === 'active') return ['pending', 'confirmed'].includes(o.status);
+        return o.status === currentFilter;
+      });
+
+      if (filtered.length === 0) {
+        ordersContainer.innerHTML = '';
+        $('#empty').style.display = 'block';
       } else {
-        usersContainer.style.display = 'none';
-        ordersContainer.style.display = 'block';
-        const filtered = allOrders.filter(o => {
-          if (currentFilter === 'all') return true;
-          if (currentFilter === 'active') return ['pending', 'confirmed'].includes(o.status);
-          return o.status === currentFilter;
-        });
-        if (filtered.length === 0) {
-          ordersContainer.innerHTML = '';
-          $('#empty').style.display = 'block';
-        } else {
-          $('#empty').style.display = 'none';
-          ordersContainer.innerHTML = filtered.map(renderOrderCard).join('');
-        }
+        $('#empty').style.display = 'none';
+        ordersContainer.innerHTML = filtered.map(renderOrderCard).join('');
       }
     }
 
     async function fetchData() {
       try {
-        const [ordersRes, usersRes] = await Promise.all([
-          fetch(`${API_BASE}/api/all-delivery-orders?t=${Date.now()}`),
-          fetch(`${API_BASE}/api/admin/users?t=${Date.now()}`)
-        ]);
-        const ordersData = await ordersRes.json();
-        const usersData = await usersRes.json();
-
-        if (ordersData.success && Array.isArray(ordersData.orders)) {
-          const pendingCount = ordersData.orders.filter(o => o.status === 'pending').length;
+        const res = await fetch(`${API_BASE}/api/all-delivery-orders?t=${Date.now()}`);
+        const data = await res.json();
+        if (data.success && Array.isArray(data.orders)) {
+          const pendingCount = data.orders.filter(o => o.status === 'pending').length;
           if (pendingCount > previousPendingCount && pendingCount > 0) showBigAlert();
           previousPendingCount = pendingCount;
-          allOrders = ordersData.orders
+
+          allOrders = data.orders
             .map(o => ({ ...o, progress: o.progress || 0 }))
             .sort((a, b) => new Date(b.date) - new Date(a.date));
+          applyView();
         }
-
-        if (usersData.users && Array.isArray(usersData.users)) {
-          allUsers = usersData.users;
-        }
-
-        applyView();
       } catch (err) {
         console.error("Fetch error:", err);
         ordersContainer.innerHTML = '<div class="empty">Failed to load data. Retrying...</div>';
       }
     }
 
-    // Order Actions Handler
     document.addEventListener('click', async (e) => {
       const btn = e.target.closest('[data-action]');
       if (!btn) return;
@@ -526,14 +338,35 @@ Welcome to the family!`);
       if (action === 'confirm') {
         success = await updateOrderStatus(orderId, 'confirmed');
         if (success) {
-          openWhatsApp(phone, confirmMessage(name));
+          openWhatsApp(phone, `Hi ${name}! 😊\nYour order on ChatPoint has been confirmed!\nWe'll prepare it soon. 🚀`);
           alert("Order confirmed & WhatsApp sent!");
         }
       } else if (action === 'delivered') {
-        success = await updateOrderStatus(orderId, 'delivered');
+        let partner = prompt("Enter delivery partner name (Suraj or Guru):")?.trim();
+        if (!["Suraj", "Guru"].includes(partner)) {
+          alert("Invalid name. Only 'Suraj' or 'Guru' allowed.");
+          btn.disabled = false;
+          return;
+        }
+
+        let profitStr = prompt(`Enter profit amount for this order (₹)`);
+        let profit = parseFloat(profitStr);
+
+        if (isNaN(profit) || profit < 0) {
+          alert("Please enter a valid non-negative number for profit.");
+          btn.disabled = false;
+          return;
+        }
+
+        if (!confirm(`Mark as Delivered?\n\nPartner: ${partner}\nProfit: ₹${profit.toFixed(2)}`)) {
+          btn.disabled = false;
+          return;
+        }
+
+        success = await updateOrderStatus(orderId, 'delivered', partner, profit);
         if (success) {
           openWhatsApp(phone, deliveredMessage);
-          alert("Order marked delivered & WhatsApp sent!");
+          alert(`Order marked delivered!\nDelivered by: ${partner}\nProfit: ₹${profit.toFixed(2)}`);
         }
       } else if (action === 'cancel') {
         if (confirm("Cancel this order?")) {
@@ -542,34 +375,30 @@ Welcome to the family!`);
         }
       } else if (action === 'progress') {
         const progress = parseInt(btn.dataset.progress);
-        success = await updateOrderProgress(orderId, progress);
+        success = await updateOrderStatus(orderId, null, null, null, progress); // progress-only update can be added if needed
         if (success) alert(`Progress updated to step ${progress}`);
       } else if (action === 'delete') {
         if (confirm("Delete this order permanently?")) {
-          success = await deleteOrder(orderId);
+          const res = await fetch(`${API_BASE}/api/delete-order`, {
+            method: 'DELETE',
+            headers: { 'Content-Type': 'application/json' },
+            body: JSON.stringify({ orderId })
+          });
+          const data = await res.json();
+          success = data.success;
           if (success) alert("Order deleted");
         }
       }
 
-      if (success || action === 'cancel') {
+      if (success) {
         fetchData();
-      } else if (!success) {
+      } else if (action !== 'cancel') {
         alert("Action failed. Try again.");
       }
 
       btn.disabled = false;
     });
 
-    // Make Premium Button - Opens Modal
-    document.addEventListener('click', (e) => {
-      const premiumBtn = e.target.closest('.make-premium-btn');
-      if (!premiumBtn) return;
-
-      currentPremiumPhone = premiumBtn.dataset.phone;
-      premiumModal.style.display = 'flex';
-    });
-
-    // Filter Buttons
     document.querySelectorAll('.filter-btn').forEach(btn => {
       btn.addEventListener('click', () => {
         document.querySelectorAll('.filter-btn').forEach(b => b.classList.remove('active'));
@@ -579,7 +408,6 @@ Welcome to the family!`);
       });
     });
 
-    // Logout
     $('#logoutBtn').onclick = () => {
       if (confirm('Logout from delivery portal?')) {
         localStorage.clear();
@@ -587,7 +415,6 @@ Welcome to the family!`);
       }
     };
 
-    // Start
     fetchData();
     setInterval(fetchData, REFRESH_INTERVAL);
   </script>
